--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Minimal eShop Single Page Application system without framework or useless dependencies.",
   "main": "server.js",
   "scripts": {
-    "watch": "./compil.js --watch public/script.js & sass --watch src/sass:public/ & sass --watch public/assets/sass:public/",
+    "watch": "./compil.js --watch public/script.js & sass --watch src/sass:public/",
     "compil": "./compil.js --compress public/script.js; sass src/sass:public/ --style=compressed",
     "server": "node --trace-warnings ./serverHTTP2.js",
     "serverTest": "node --trace-warnings ./server.js",
