--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /node_modules/
 /.idea/
+/assets/
 /public/assets/
+/public/app.js
 /public/spectre/
 package-lock.json
 /public/app.css
 /public/app.css.map
-/public/script.js
 .DS_Store
