--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 /node_modules/
 /.idea/
-
+/public/app.js
+/public/spectre/
+package-lock.json
+/public/app.css
+/public/app.css.map
+/public/script.js
 .DS_Store
